hphp/hack/test/typecheck/shape_nullsafe.php.exp
File "shape_nullsafe.php", line 23, characters 9-21:
You are accessing a field known to not exist (Typing[4321])
File "shape_nullsafe.php", line 11, characters 3-8:
The field `x` is not defined in this shape
File "shape_nullsafe.php", line 24, characters 9-23:
You are accessing a field known to not exist (Typing[4321])
File "shape_nullsafe.php", line 11, characters 3-8:
The field `y` is not defined in this shape
File "shape_nullsafe.php", line 25, characters 9-23:
You are accessing a field known to not exist (Typing[4321])
File "shape_nullsafe.php", line 12, characters 3-8:
The field `y` is not defined in this shape
